devops/cloud-native/istio/deploys/04.gateway/nodeport/6-istio-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3

metadata:
  name: fleetman-webapp
  namespace: default

spec:
  hosts:
    - fleetman-webapp.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: fleetman-webapp.default.svc.cluster.local
            subset: original
          weight: 90
        - destination:
            host: fleetman-webapp.default.svc.cluster.local
            subset: experimental
          weight: 10
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3

metadata:
  name: fleetman-webapp
  namespace: default

spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
